--- a/index.html
+++ b/index.html
@@ -3,22 +3,13 @@
 
 <head>
     <title>PWA</title>
-    
+
     <link rel="manifest" href="./manifest.json">
 
- <!--   <script src="app.js"></script>-->
+    <!--   <script src="app.js"></script>-->
     <script>
         if ("serviceWorker" in navigator) {
-            navigator.serviceWorker
-            .register('./serviceWorker.js') //file location
-            .then(()=>{
-                console.log("Service worker register successfully")
-            })
-            .catch((err)=>{
-                console.log("Something went wrong",err)
-            })
-        } else {
-            console.log("Service worker is not available")
+            navigator.serviceWorker.register('./serviceWorker.js');
         }
     </script>
 
