--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>PWA</title>
 
-    <link rel="manifest" href="./manifest.json">
+    <link rel="manifest" href="./manifest.webmanifest">
 
     <!--   <script src="app.js"></script>-->
     <script>
